fix more ui buys (center text on mobile)

--- a/src/stylesheets/cart/_cartListing.scss
+++ b/src/stylesheets/cart/_cartListing.scss
@@ -75,6 +75,10 @@
     display: flex;
     justify-content: space-around;
     flex-grow: 1;
+
+     h3 {
+       text-align: center;
+     }
   }
 
   button {
